--- a/Backend/Clarinet.toml
+++ b/Backend/Clarinet.toml
@@ -1,22 +1,31 @@
-
 [project]
-name = "Backend"
-description = ""
+name = 'Backend'
+description = ''
 authors = []
 telemetry = false
-cache_dir = "./.cache"
+cache_dir = './.cache'
 
-# [contracts.counter]
-# path = "contracts/counter.clar"
+[[project.requirements]]
+contract_id = 'SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard'
+[contracts.clarity-bitcoin-mini]
+path = 'contracts/clarity-bitcoin-mini.clar'
+clarity_version = 2
+epoch = 2.5
 
+[contracts.escrow]
+path = 'contracts/escrow.clar'
+clarity_version = 2
+epoch = 2.5
+
+[contracts.sbtc]
+path = 'contracts/sbtc.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
-passes = ["check_checker"]
-check_checker = { trusted_sender = false, trusted_caller = false, callee_filter = false }
+passes = ['check_checker']
 
-# Check-checker settings:
-# trusted_sender: if true, inputs are trusted after tx_sender has been checked.
-# trusted_caller: if true, inputs are trusted after contract-caller has been checked.
-# callee_filter: if true, untrusted data may be passed into a private function without a
-# warning, if it gets checked inside. This check will also propagate up to the
-# caller.
-# More informations: https://www.hiro.so/blog/new-safety-checks-in-clarinet
+[repl.analysis.check_checker]
+strict = false
+trusted_sender = false
+trusted_caller = false
+callee_filter = false
