--- a/Backend/Clarinet.toml
+++ b/Backend/Clarinet.toml
@@ -21,6 +21,11 @@ epoch = 2.5
 path = 'contracts/sbtc.clar'
 clarity_version = 2
 epoch = 2.5
+
+[contracts.stream]
+path = 'contracts/stream.clar'
+clarity_version = 2
+epoch = 2.5
 [repl.analysis]
 passes = ['check_checker']
 
