--- a/Backend/Clarinet.toml
+++ b/Backend/Clarinet.toml
@@ -17,6 +17,11 @@ path = 'contracts/escrow.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.payment]
+path = 'contracts/payment.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.sbtc]
 path = 'contracts/sbtc.clar'
 clarity_version = 2
