--- a/Backend/deployments/default.devnet-plan.yaml
+++ b/Backend/deployments/default.devnet-plan.yaml
@@ -10,9 +10,9 @@ plan:
       transactions:
         - requirement-publish:
             contract-id: SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard
-            remap-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            remap-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
             remap-principals:
-              SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+              SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
             cost: 8400
             path: "./.cache/requirements/SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard.clar"
             clarity-version: 1
@@ -21,30 +21,30 @@ plan:
       transactions:
         - contract-publish:
             contract-name: clarity-bitcoin-mini
-            expected-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            expected-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
             cost: 52940
             path: contracts/clarity-bitcoin-mini.clar
             anchor-block-only: true
             clarity-version: 2
         - contract-publish:
-            contract-name: escrow
-            expected-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
-            cost: 2250
-            path: contracts/escrow.clar
-            anchor-block-only: true
-            clarity-version: 2
-        - contract-publish:
             contract-name: sbtc
-            expected-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
+            expected-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
             cost: 47630
             path: contracts/sbtc.clar
             anchor-block-only: true
             clarity-version: 2
         - contract-publish:
-            contract-name: stream
-            expected-sender: ST1PQHQKV0RJXZFY1DGX8MNSNYVE3VGZJSRTPGZGM
-            cost: 64110
-            path: contracts/stream.clar
+            contract-name: escrow
+            expected-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+            cost: 21190
+            path: contracts/escrow.clar
+            anchor-block-only: true
+            clarity-version: 2
+        - contract-publish:
+            contract-name: payment
+            expected-sender: ST1SJ3DTE5DN7X54YDH5D64R3BCB6A2AG2ZQ8YPD5
+            cost: 36720
+            path: contracts/payment.clar
             anchor-block-only: true
             clarity-version: 2
       epoch: "2.5"
