--- a/Backend/Clarinet.toml
+++ b/Backend/Clarinet.toml
@@ -7,7 +7,6 @@ cache_dir = './.cache'
 
 [[project.requirements]]
 contract_id = 'SP3FBR2AGK5H9QBDH3EEN6DF8EK8JY7RX8QJ5SVTE.sip-010-trait-ft-standard'
-
 [contracts.clarity-bitcoin-mini]
 path = 'contracts/clarity-bitcoin-mini.clar'
 clarity_version = 2
@@ -23,11 +22,15 @@ path = 'contracts/payment.clar'
 clarity_version = 2
 epoch = 2.5
 
+[contracts.payments]
+path = 'contracts/payments.clar'
+clarity_version = 2
+epoch = 2.5
+
 [contracts.sbtc]
 path = 'contracts/sbtc.clar'
 clarity_version = 2
 epoch = 2.5
-
 [repl.analysis]
 passes = ['check_checker']
 
